Test new url check was saved to database